Fixed spacing around Follows and Listens to

--- a/app/assets/stylesheets/application/alonetone.css.scss
+++ b/app/assets/stylesheets/application/alonetone.css.scss
@@ -629,8 +629,9 @@
 
 #follows,#mostly_listens_to {
   padding-bottom: 0px;
-  margin-bottom: -10px;
+  margin-bottom: 10px;
   padding-right: 0px;
+  width: 395px;
   div {
     float: left;
     margin-bottom: 10px;
